feat(channels, rules, repos):
-NewPhone shows an alert message
-Categories CRUD finished
-CRUD implemented in qualifications, skills and pause_states (pending
back integration)
-ngDisabled when element isn’t modificable
-Duplicate menu-option in rules view

--- a/src/contactNetConfig/layout.html
+++ b/src/contactNetConfig/layout.html
@@ -91,13 +91,13 @@
 
 		<md-fab-speed-dial ng-if="!fab.hide" md-direction="down" md-open="fab.isOpen" class="md-scale fabButtonCreate">
 		  <md-fab-trigger>
-		    <md-button aria-label="trigger" ng-click="fab.trigger.action()" class="md-fab md-accent">
+		    <md-button aria-label="trigger" ng-click="fab.trigger.action($event)" class="md-fab md-accent">
 					<md-icon md-svg-icon="{{fab.trigger.icon}}"></md-icon>
 				</md-button>
 		  </md-fab-trigger>
 		  <md-fab-actions>
 				<div ng-if="fab.isOpen" ng-repeat="(k,v) in fab.actions">
-					<md-button aria-label="button" ng-click="v.action()" class="md-fab md-accent md-raised md-mini">
+					<md-button aria-label="button" ng-click="v.action($event)" class="md-fab md-accent md-raised md-mini">
 						<md-icon md-svg-icon="{{v.icon}}"></md-icon>
 					</md-button>
 				</div>
