--- a/src/contactNetConfig/modules/rules/rules.html
+++ b/src/contactNetConfig/modules/rules/rules.html
@@ -26,6 +26,14 @@
 		            <md-menu-item >
 		              <md-button ng-click="">
 		                  <div layout="row">
+		                  	<md-icon md-menu-align-target md-svg-icon="content_copy" ></md-icon>
+		                    <p flex>Duplicar</p>
+		                  </div>
+		              </md-button>
+		            </md-menu-item>
+		            <md-menu-item >
+		              <md-button ng-click="">
+		                  <div layout="row">
 		                  	<md-icon md-menu-align-target md-svg-icon="delete"></md-icon>
 		                    <p flex>Eliminar</p>
 		                  </div>
