--- a/src/contactNetConfig/modules/core/directives/cnColorPicker/cnColorPicker.html
+++ b/src/contactNetConfig/modules/core/directives/cnColorPicker/cnColorPicker.html
@@ -2,7 +2,7 @@
   <div class="selected-color" ng-style="{'background-color': '#'+ngModel}"></div>
   <div class="color-palette">
     <div ng-repeat="option in options"
-        ng-style="{'background-color': option}"
+        ng-style="{'background-color': '#'+option}"
         ng-class="{'palette-selected-color': option == ngModel, 'transparent-color': option == 'transparent'}"
         ng-click="changeColor(option)"></div>
   </div>
