--- a/src/contactNetConfig/modules/repos/directives/qualifications/qualifications.html
+++ b/src/contactNetConfig/modules/repos/directives/qualifications/qualifications.html
@@ -4,21 +4,28 @@
   <div class="border-container" layout="row" ng-repeat="(k,v) in qualifications" layout-align="space-between center">
     <md-input-container flex="60">
       <label>Nombre</label>
-      <input ng-model="v.label">
+      <input ng-disabled="!v.modificable" ng-model="v.label">
     </md-input-container>
     <md-input-container class="md-select">
       <label>Valoración</label>
-      <md-select ng-model="v.value">
+      <md-select ng-disabled="!v.modificable" ng-model="v.value">
         <md-option value="POSITIVE">Positiva</md-option>
         <md-option value="NEGATIVE">Negativa</md-option>
       </md-select>
     </md-input-container>
-    <md-button class="md-icon-button" aria-label="Delete" ng-click="remove(k)">
+    <md-button ng-disabled="!v.modificable" class="md-icon-button" aria-label="Delete" ng-click="remove(k)">
       <md-icon md-svg-icon="delete"></md-icon>
     </md-button>
   </div>
 
   <p class="md-caption blueVC-color" ng-click="addNew()">Añadir cualificación de casos</p>
+
+  <div flex layout="row" class="action-buttons">
+    <span flex></span>
+    <md-button class="md-accent md-hue-2" ng-click="card.openCard = false">Cancelar</md-button>
+    <span flex="5"></span>
+    <md-button class="md-accent md-raised md-hue-2" ng-click="save()">Guardar</md-button>
+  </div>
 
 </div>
 
