fix(channels, contactNets, rules):
-Twitter reference removed
-Channels hired in blue

--- a/src/contactNetConfig/modules/rules/rules.html
+++ b/src/contactNetConfig/modules/rules/rules.html
@@ -96,27 +96,27 @@
 						</div>
 
 						<div flex class="channels-section" layout="row" layout-align="space-between">
-							<div flex="15" layout="column" >
+							<div flex="20" layout="column" >
 								<md-icon class="big-icon" md-svg-icon="phone" aria-label="phone"></md-icon>
 								<p>Voz</p>
 								<a class="blueVC-color">Contratar</a>
 							</div>
 
-							<div flex="15" layout="column" >
-								<md-icon class="big-icon greenVC-color" md-svg-icon="message" aria-label="message"></md-icon>
+							<div flex="20" layout="column" >
+								<md-icon class="big-icon blueVC-color" md-svg-icon="message" aria-label="message"></md-icon>
 								<p>Chat</p>
 							</div>
 
-							<div flex="15" layout="column" >
-								<md-icon class="big-icon greenVC-color" md-svg-icon="mail" aria-label="mail"></md-icon>
+							<div flex="20" layout="column" >
+								<md-icon class="big-icon blueVC-color" md-svg-icon="mail" aria-label="mail"></md-icon>
 								<p>Mail</p>
 							</div>
 
-							<div flex="15" layout="column" >
+							<!-- <div flex="15" layout="column" >
 								<md-icon class="big-icon" md-svg-icon="mail" aria-label="mail"></md-icon>
 								<p>Twitter</p>
 								<span class="md-caption">Próximamente<span>
-							</div>
+							</div> -->
 						</div>
 
 					</div>
