--- a/src/contactNetConfig/modules/contactNets/contactNets.html
+++ b/src/contactNetConfig/modules/contactNets/contactNets.html
@@ -68,7 +68,7 @@
 				      	</div> -->
 				      </div>
 						</div>
-						<div cn-contact-net-voice-card-channel-configuration class="md-item md-whiteframe-z1" ng-model="cnContactNetVoiceCardChannelConfiguration.openCard" ng-class="{'openInnerCard md-whiteframe-z3': cnContactNetVoiceCardChannelConfiguration.openCard}"></div>
+						<div cn-contact-net-voice-card-channel-configuration contactnet="v" class="md-item md-whiteframe-z1" ng-model="voiceCard" ng-class="{'openInnerCard md-whiteframe-z3': voiceCard.openCard}"></div>
 						<div cn-contact-net-chat-card-channel-configuration class="md-item md-whiteframe-z1" ng-model="cnContactNetChatCardChannelConfiguration.openCard" ng-class="{'openInnerCard md-whiteframe-z3': cnContactNetChatCardChannelConfiguration.openCard}"></div>
 						<div cn-contact-net-mail-card-channel-configuration class="md-item md-whiteframe-z1" ng-model="cnContactNetMailCardChannelConfiguration.openCard" ng-class="{'openInnerCard md-whiteframe-z3': cnContactNetMailCardChannelConfiguration.openCard}"></div>
 						<div cn-contact-net-twitter-card-channel-configuration class="md-item md-whiteframe-z1" ng-model="cnContactNetTwitterCardChannelConfiguration.openCard" ng-class="{'openInnerCard md-whiteframe-z3': cnContactNetTwitterCardChannelConfiguration.openCard}"></div>
