--- a/src/contactNetConfig/layout.html
+++ b/src/contactNetConfig/layout.html
@@ -2,7 +2,7 @@
   <div id="sidenavUserInfo" layout="column">
     <div flex layout="column" layout-align="center-center" layout-margin>
       <span style="background-image: url(http://static.bleacherreport.net/images/redesign/avatars/default-user-icon-profile.png);" layout></span>
-      <p>David Caballero</p>
+      <p>{{session.userName}}</p>
     </div>
     <div></div>
   </div>
