--- a/src/contactNetConfig/modules/repos/directives/skills/skills.html
+++ b/src/contactNetConfig/modules/repos/directives/skills/skills.html
@@ -1,19 +1,24 @@
+<div class="no-items" flex layout="column" ng-if="!filtered.length">
+  <p>No hay ninguna skill de agente guardada, puedes <span class="blueVC-color" ng-click="addNew()">crear la primera ahora</span></p>
+  <p class="md-caption">Las skills le ayudarán a optimizar su ContactNet</p>
+</div>
 
-<div flex layout="column" ng-if="skills.length">
 
-  <div class="border-container" layout="row" ng-repeat="(k,v) in skills" layout-align="space-between center">
+<div flex layout="column">
+
+  <div class="border-container" layout="row" ng-repeat="(k,v) in filtered = (skills | filter:{'action': '!DEL'})" layout-align="space-between center">
     <md-input-container flex>
       <label>Nombre</label>
       <input ng-disabled="!v.modificable" ng-model="v.label">
     </md-input-container>
-    <md-button ng-disabled="!v.modificable" class="md-icon-button" aria-label="Delete" ng-click="remove(k)">
+    <md-button ng-disabled="!v.modificable" class="md-icon-button" aria-label="Delete" ng-click="remove(v)">
       <md-icon md-svg-icon="delete"></md-icon>
     </md-button>
   </div>
 
-  <p class="md-caption blueVC-color" ng-click="addNew()">Añadir skill de agente</p>
+  <p class="md-caption blueVC-color" ng-show="filtered.length" ng-click="addNew()">Añadir skill de agente</p>
 
-  <div flex layout="row" class="action-buttons">
+  <div flex layout="row" class="action-buttons" ng-show="skills.length">
     <span flex></span>
     <md-button class="md-accent md-hue-2" ng-click="card.openCard = false">Cancelar</md-button>
     <span flex="5"></span>
@@ -24,8 +29,5 @@
 </div>
 
 
-<div class="no-items" flex layout="column" ng-if="!skills.length">
-  <p>No hay ninguna skill de agente guardada, puedes <span class="blueVC-color" ng-click="addNew()">crear la primera ahora</span></p>
-  <p class="md-caption">Las skills le ayudarán a optimizar su ContactNet</p>
-</div>
+
   
