--- a/src/contactNetConfig/modules/contactNets/contactNets.html
+++ b/src/contactNetConfig/modules/contactNets/contactNets.html
@@ -45,7 +45,7 @@
 				<md-progress-linear md-mode="indeterminate" ng-if="v.openCard && !v.contactNetInfo"></md-progress-linear>
 
 			<div class="item-card" ng-if="v.contactNetInfo" layout="column">
-				<div layout-xs="column" layout-gt-xs="row" layout-padding ng-show="!loadingCards.length">
+				<div layout-xs="column" layout-gt-xs="row" layout-padding ng-show="!loadingCards.length" class="md-body-1">
 
 					<div class="cardContainer" flex layout="column" layout-align="space-between">
 						<div layout layout="row" layout-align="start center" layout-margin class="md-hue-3">
