chore(contactnets, supervisor)
- Add la de cristo =)

--- a/src/contactNetConfig/modules/contactNets/contactNets.html
+++ b/src/contactNetConfig/modules/contactNets/contactNets.html
@@ -9,7 +9,7 @@
 				</div>
 			</md-whiteframe>
 
-			<div ng-if="contactNetsService.contactNets.length" class="md-item md-whiteframe-z1" ng-repeat="(k, v) in contactNetsService.contactNets | filter:filterSearch" ng-class="{'open-item': v.openCard}">
+			<div ng-if="contactNetsService.contactNets.length" class="md-item md-whiteframe-z1" ng-repeat="(k, v) in contactNetsService.contactNets | filter:filterSearch" ng-class="{'open-item': v.openCard}" ng-init="step=2">
 				<md-list-item ng-show="v.id" class="item" flex aria-label="row" md-ink-ripple class="md-clickable" cn-contact-net-info="v" cn-open-contact-nets>
 					<div flex ng-class="{'hText' : v.contactNetInfo}">{{v.description}}</div>
 					<span flex></span>
@@ -54,28 +54,41 @@
 								<input placeholder="Nombre del ContactNet" ng-model="v.description" flex>
 							</div>
 				      <div flex="60" layout="row" layout-align="end center">
-				      	<div flex layout="row" layout-align="center center" ng-class="{'activeIndex' : !activeIndexNavigation}">
+				      	<div flex layout="row" layout-align="center center" ng-class="{'activeIndex' : step==1}">
 				      		<span layout-margin>1</span>
 				      		<span>Configurar Canales</span>
 				      	</div>
-				      	<div flex layout="row" layout-align="center center">
+				      	<div flex layout="row" layout-align="center center" ng-class="{'activeIndex' : step==2}">
 				      		<span layout-margin>2</span>
 				      		<span>Supervisores</span>
 				      	</div>
-<!-- 				      	<div flex layout="row" layout-align="center center">
+				      	<div flex layout="row" layout-align="center center" ng-class="{'activeIndex' : step==3}">
 				      		<span layout-margin>3</span>
 				      		<span>BackOffice</span>
-				      	</div> -->
+				      	</div>
 				      </div>
 						</div>
-						<div cn-contact-net-voice-card-channel-configuration contactnet="v" class="md-item md-whiteframe-z1" ng-model="voiceCard" ng-class="{'openInnerCard md-whiteframe-z3': voiceCard.openCard}"></div>
-						<div cn-contact-net-chat-card-channel-configuration class="md-item md-whiteframe-z1" ng-model="cnContactNetChatCardChannelConfiguration.openCard" ng-class="{'openInnerCard md-whiteframe-z3': cnContactNetChatCardChannelConfiguration.openCard}"></div>
-						<div cn-contact-net-mail-card-channel-configuration class="md-item md-whiteframe-z1" ng-model="cnContactNetMailCardChannelConfiguration.openCard" ng-class="{'openInnerCard md-whiteframe-z3': cnContactNetMailCardChannelConfiguration.openCard}"></div>
-						<div cn-contact-net-twitter-card-channel-configuration class="md-item md-whiteframe-z1" ng-model="cnContactNetTwitterCardChannelConfiguration.openCard" ng-class="{'openInnerCard md-whiteframe-z3': cnContactNetTwitterCardChannelConfiguration.openCard}"></div>
+						<div ng-if="step == 1">
+							<div cn-contact-net-voice-card-channel-configuration contactnet="v" ng-model="voiceCard" class="md-item md-whiteframe-z1" ng-class="{'openInnerCard md-whiteframe-z3': voiceCard.openCard}"></div>
+							<div cn-contact-net-chat-card-channel-configuration class="md-item md-whiteframe-z1" ng-model="cnContactNetChatCardChannelConfiguration.openCard" ng-class="{'openInnerCard md-whiteframe-z3': cnContactNetChatCardChannelConfiguration.openCard}"></div>
+							<div cn-contact-net-mail-card-channel-configuration class="md-item md-whiteframe-z1" ng-model="cnContactNetMailCardChannelConfiguration.openCard" ng-class="{'openInnerCard md-whiteframe-z3': cnContactNetMailCardChannelConfiguration.openCard}"></div>
+							<div cn-contact-net-twitter-card-channel-configuration class="md-item md-whiteframe-z1" ng-model="cnContactNetTwitterCardChannelConfiguration.openCard" ng-class="{'openInnerCard md-whiteframe-z3': cnContactNetTwitterCardChannelConfiguration.openCard}"></div>
+						</div>
+						<div ng-if="step == 2">
+							<div cn-supervisors-config contactnet="v" layout="column"></div>
+						</div>
 
-
-						<div layout layout-align="end">
-							<md-button class="md-hue-2">Siguiente</md-button>
+						<div layout="row">
+							<div layout="row" layout-align="start" flex>
+								<md-button ng-show="step > 1" layout-align="start" ng-click="step = step-1" class="md-hue-2">
+									Anterior
+							</md-button>
+							</div>
+							<div layout="row" layout-align="end" flex>
+								<md-button ng-show="step < 3" ng-click="step = step+1" class="md-hue-2">
+									Siguiente
+								</md-button>
+							</div>
 						</div>
 
 					</div>
